changed home similar to campaign page and listed products for users

--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dahab Miners</title>
+    <meta
+      name="description"
+      content="Dahab Miners is the premier crypto mining service in UAE. Explore our Bitcoin machines in Abu Dhabi and maximize your cryptocurrency earnings!"
+    />
+    <title>Crypto Mining in UAE-Bitcoin Machines Abu Dhabi-Dahab Miners</title>
   </head>
   <body>
     <div id="root"></div>
