--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Dahab Miners is the premier crypto mining service in UAE. Explore our Bitcoin machines in Abu Dhabi and maximize your cryptocurrency earnings!"
+      content="Dahab Miners Retail is one of the leading bitcoin mining companies in Dubai. We offer
+cost-effective crypto mining and hosting solutions for your miners in UAE."
+    />
+    <meta
+      name="keywords"
+      content="Bitcoin Mining Dubai, Bitcoin Mining Machines in Dubai, Bitcoin mining agency uae, crypto mining company"
+    />
+    <meta
+      property="og:title"
+      content="Bitcoin Mining Dubai | Bitcoin Mining Machines in Dubai"
+    />
+    <meta
+      property="og:description"
+      content="Dahab Miners Retail is one of the leading bitcoin mining Dubai, Machine retailers. We offer
+cost effective hosting solutions for your miners in UAE."
     />
     <title>Crypto Mining in UAE-Bitcoin Machines Abu Dhabi-Dahab Miners</title>
   </head>
